update and host
