# DiaMate/Data/models/BloodGlucoseReading.cs
@@ -11,10 +11,10 @@ namespace DiaMate.Data.models
         [Key]
         public int ReadingId { get; set; }
 
-        [Required,ForeignKey(nameof(Patient))]
+
         public int PatientId { get; set; }
 
-        
+        [Required, ForeignKey(nameof(PatientId))]
         public Patient Patient { get; set; }
 
         [Required,Column(TypeName = "decimal(6,2)")]
